--- a/index.html
+++ b/index.html
@@ -4,13 +4,6 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Dea Lorenzo</title>
-<meta name="description" content="">
-<meta name="author" content="">
-
-<!-- Favicons
-    ================================================== -->
-
-<!-- Bootstrap -->
 <link rel="stylesheet" type="text/css"  href="css/bootstrap.css">
 <link rel="stylesheet" type="text/css" href="fonts/font-awesome/css/font-awesome.css">
 
@@ -70,7 +63,7 @@
       <hr>
     </div>
     <div class="row">
-      <div class="col-md-12 text-center"><img src="img/about.jpg" class="img-responsive"></div>
+      <div class="col-md-12 text-center"><img src="img/about.png" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
           <p>I'm an aspiring full-stack developer. There are countless fascinating things one can learn. Web and apps development are things easy to fall in love with. At the end of the day, it boils down to improving people's lives and communicating with other people, may it be personal or business reasons. If you and I have an agreement with that, let's go ahead and talk about how we can put your project out there in this world wide web.</p>
